[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
common = {path = "../common"}
reqwest = { version = "0.13", features = ["json"], default-features = false}
# reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.0"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
