[package]
name = "coordinator"
version = "0.1.0"
edition = "2024"

[dependencies]
common = {path = "../common"}
actix-web = "4.12.1"
serde_json = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"]}
uuid = { version = "1.19.0", features = ["v4", "serde"] }
tokio = "1.49.0"
env_logger = "0.11"
log = "0.4"
rusqlite = { version = "0.32.1", features = ["bundled"] }
cron = "0.12"