[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false}
chrono = { version = "0.4.42", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1.0"
hostname = "0.4"
env_logger = "0.11"
log = "0.4"